fix the overflow bug

--- a/src/main.scss
+++ b/src/main.scss
@@ -969,7 +969,9 @@ summary {
 .max-1-line {
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    display: -webkit-box;
+    -webkit-line-clamp: 1; /* number of lines to show */
+    -webkit-box-orient: vertical;
 }
 
 .outline-default {
